--- a/kbArt/CMakeLists.txt
+++ b/kbArt/CMakeLists.txt
@@ -41,6 +41,8 @@ add_library( # Sets the name of the library.
         src/main/cpp/art_thread_jni.cpp
         src/main/cpp/art_jni.cpp
         src/main/cpp/android_14_debuggable_bug_fixer.cpp
+        src/main/cpp/test.cpp
+        src/main/cpp/suspend_time_out_fix.cpp
         )
 
 target_include_directories(kbArt PUBLIC
