--- a/kbArt/build.gradle
+++ b/kbArt/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
 }
 
 android {
@@ -64,7 +64,7 @@ android {
 
 dependencies {
 
-    implementation("com.bytedance:bytehook:1.0.7")
+    implementation("com.bytedance:bytehook:1.0.10")
     implementation("io.hexhacking:xdl:1.2.1")
     implementation 'com.bytedance.android:shadowhook:1.0.7'
     implementation('androidx.annotation:annotation:1.1.0')
@@ -72,5 +72,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
-
-apply plugin: "com.vanniktech.maven.publish"
+//apply plugin: "com.vanniktech.maven.publish"
